--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^3.1.1
   firebase_remote_config: ^0.11.0
   flutter_signin_button: ^2.0.0
+  google_sign_in: ^5.1.0
 
 dev_dependencies:
   flutter_test:
